// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeoPushpinChart with latitude and longitude only with tooltip should create expected execution definition 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.uscities.city.location",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.city.location",
      },
    },
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.uscities.city.location",
          "type": "displayForm",
        },
        "localIdentifier": "longitude_df",
      },
    },
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  ],
  "buckets": Array [
    Object {
      "items": Array [],
      "localIdentifier": "size",
    },
    Object {
      "items": Array [],
      "localIdentifier": "color",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.uscities.city.location",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.city.location",
          },
        },
      ],
      "localIdentifier": "latitude",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.uscities.city.location",
              "type": "displayForm",
            },
            "localIdentifier": "longitude_df",
          },
        },
      ],
      "localIdentifier": "longitude",
    },
    Object {
      "items": Array [],
      "localIdentifier": "segment",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.uscities.city",
              "type": "displayForm",
            },
            "localIdentifier": "tooltipText_df",
          },
        },
      ],
      "localIdentifier": "tooltipText",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "a_label.uscities.city.location",
        "longitude_df",
        "tooltipText_df",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [],
  "postProcessing": Object {},
  "sortBy": Array [],
  "workspace": "live-examples-workspace",
}
`;

exports[`GeoPushpinChart with latitude and longitude only with tooltip should create expected props for core chart 1`] = `
Object {
  "config": Object {
    "mapboxToken": "this-is-not-real-token",
    "showLabels": false,
    "tooltipText": Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  },
  "error": null,
  "exportTitle": "GeoPushpinChart",
  "isLoading": true,
  "onDataTooLarge": [Function],
  "onNegativeValues": [Function],
  "theme": Object {},
  "themeIsLoading": undefined,
}
`;

exports[`GeoPushpinChart with location only should create expected execution definition 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.uscities.city.location",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.city.location",
      },
    },
  ],
  "buckets": Array [
    Object {
      "items": Array [],
      "localIdentifier": "size",
    },
    Object {
      "items": Array [],
      "localIdentifier": "color",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.uscities.city.location",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.city.location",
          },
        },
      ],
      "localIdentifier": "location",
    },
    Object {
      "items": Array [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "a_label.uscities.city.location",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [],
  "postProcessing": Object {},
  "sortBy": Array [],
  "workspace": "live-examples-workspace",
}
`;

exports[`GeoPushpinChart with location only should create expected props for core chart 1`] = `
Object {
  "config": Object {
    "mapboxToken": "this-is-not-real-token",
    "showLabels": false,
  },
  "error": null,
  "exportTitle": "GeoPushpinChart",
  "isLoading": true,
  "onDataTooLarge": [Function],
  "onNegativeValues": [Function],
  "theme": Object {},
  "themeIsLoading": undefined,
}
`;
